[package]
name = "loggy-neko"
version = "0.1.2"
edition = "2021"
description = "loggy-neko is a thread-safe logging tool with dynamic log level configuration."
license = "MIT"
repository = "https://github.com/durpyneko/loggy-neko"
homepage = "https://github.com/durpyneko/loggy-neko"
documentation = "https://github.com/durpyneko/loggy-neko" 
readme = "README.md"
exclude = [
    "src/main.rs",
]

[lib]
crate-type = ["lib"]

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
lazy_static = "1.4.0"
